craeted actual flows and all other functions for it

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "FSharp.autoRevealInExplorer": "disabled"
+    "FSharp.autoRevealInExplorer": "disabled",
+    "FSharp.inlayHints.parameterNames": false
 }
